# FilterFusion

./: .gitignore  @v3，升级到  CNAME  PROJECT_DOCS.md  README.md  README_EN.md  README_JP.md  README_KO.md  _cdnauth  about-swiper-head.html  index.html  pyproject.toml  requirements-dev.txt  verification.html
.codebuddy/memory/: 2026-06-13.md  2026-06-14.md  2026-06-18.md  MEMORY.md
.codebuddy/plans/: FilterFusion_Python_3_13_升级与性能优化_cdcb33b0.md  dns-filter-rules-support_3c35ee22.md  readme-premium-upgrade_cc403364.md  reorganize-project-folders_395cac3b.md  修复_GitHub_Actions_工作流问题_2c6faa34.md  修复_checksum_生成方式_829c4fb1.md
.github/workflows/: Code_20260622082739.yaml  daily-update.yaml  daily-update.yml  static.yml  weekly-release.yml
config/: default.header  dns.header  dns_sources.txt  dns_sources.yaml  dns_summary.json  sources.json  sources.txt  sources.yaml  summary.json
css/: custom.css  hero-bg-video.css  hero-highlight.css  style.css
docs/: PROJECT_DOCS.md  PROJECT_LOG.md  merge_optimization_plan.md
docs/plans/: FilterFusion_项目优化计划_be730b88.md  Python_3_10__激进升级方案_1920d2a3.md  fix-scripts-init-py_87e24ce1.md
docs/wiki/: CI-CD.md  Home.md  安装与快速开始.md  常见问题-FAQ.md  开发者文档.md  自定义组合规则.md  规则源说明.md  订阅地址.md  配置说明.md
js/: about-glide.js  about-swiper.js  aos-init.js  custom.js  hero-bg-canvas.js  hero-bg-video.js  hero-bg-waves.backup.js  hero-bg-waves.js  hero-particles.js  hero-split-anim.js  hero-title-anim.backup.js  hero-title-anim.js  main.js  qq-btn.js  wechat-btn.js
personal-site/: index.html
rules/: adguard_chinese.txt  adguard_extra.txt  adguard_mobile.txt  dns_adguard_dns.txt  fetch_meta.json
scripts/: adguard_chinese.txt  adguard_extra.txt  adguard_mobile.txt  base_fetcher.py  dns_adguard_dns.txt  dns_fetch_meta.json  fetch_all.py  fetch_dns_rules.py  fetch_meta.json  fetch_rules.py  merge_all.py  merge_dns_rules.py  merge_rules.py  run_all.py  test.txt  utils.py
