[project]
name = "FilterFusion"
version = "1.0.0"
description = "高性能广告过滤规则合并工具，自动抓取、去重、分类多源规则"
authors = [
    {name = "Chaniug", email = "chaniug@example.com"}
]
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "httpx[http2]>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "basedpyright>=1.19.0",
    "black>=24.10.0",
    "isort>=5.13.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = false
warn_unused_configs = true

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportExplicitAny = false
reportAny = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnusedCallResult = "none"
reportUnusedImport = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]

[tool.black]
line-length = 120
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
